--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</p>
 				</td>
 				<td width="10%" style="border: 1px solid; background-color: mintcream;">
-					<a href="https://notptn.github.io/Registration.html" class="popup" target="_blank">
+					<a href="https://notptn.github.io/Gardening-School/Registration.html" class="popup" target="_blank">
 						<img src="r.png" width="200px" height="150px">
 					</a>
 				</td>
@@ -46,7 +46,7 @@
 			
 			<tr>
 				<td width="10%" style="border: 1px solid; background-color: mintcream;">
-					<a href="https://notptn.github.io/Feedback.html" target="_blank">
+					<a href="https://notptn.github.io/Gardening-School/Feedback.html" target="_blank">
 						<img src="fb.png" width="200px" height="150px">
 					</a>
 				</td>
