--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td colspan="2" rowspan="2">
+				<td colspan="2" rowspan="2" style="padding-left: 10px;">
 					<p style="color: darkgreen; text-indent: 50px; text-align: justify;">
 						As schools become more aware of the benefits of experiential learning, school gardens have been transformed in outdoor classrooms, enabling students to discover science and the natural environment through fun, engaging and hands-on gardening activities.
 					</p>
